# dot-files

./: .bash_profile  .gitignore  .gitmodules  .stow-local-ignore  .tmux.conf  .vimrc  AGENTS.md  Brewfile  Brewfile.lock.json  Makefile  README.md  README.org  bootstrap_debian.sh  dot-inputrc  dot-zshrc  install.sh  install_linux.sh  install_mac.sh  playbook.yaml  setup.py  setup_fish.fish  setup_neovim.sh  stow.sh
.github/workflows/: ci.yml
alacritty/.config/alacritty/: alacritty.toml  alacritty.yml
bash/: .bashrc  main.sh  setup.sh
bash/.bashrc.d/: aliases.sh  options.sh
config/sway/: config
config/swaylock/: config
config/waybar/: config.jsonc  style.css
config/wofi/: style.css
dot-bashrc.d/: aliases.sh  navigation.sh  options.sh  path.sh  tools.sh  ui.sh
dot-config/alacritty/: alacritty.toml
dot-config/mpd/: mpd.conf
dot-config/niri/: config.kdl
dot-config/nvim/: lazy-lock.json
dot-config/opencode/: opencode.json
dot-config/sway/: config
dot-config/swaylock/: config
dot-config/wezterm/: wezterm.lua
dot-config/wlogout/: style.css
dot-config/zsh.d/: aliases.zsh  path.zsh  tools.zsh  ui.zsh
dot-setup/: Cargo.toml  config.toml  install.sh
dot-setup/src/: main.rs
dot-wip/tmux/: .tmux.conf
firefox/: setup.sh
iterm/: setup.sh
kde-run-or-raise/: Cargo.toml
kde-run-or-raise/src/: main.rs
node/: setup.sh
nvim/: init.vim
nvim/.config/nvim/: coc-settings.json  init.vim
roles/debian/tasks/: main.yaml
sway/.config/sway/: config
tmux/: .tmux.conf  setup.sh  tmux.conf
vscode/: setup.sh
zsh/: .zshrc
(+27 files in other folders)
